--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,86 @@
 
 
 
+<section class="optimization">
+	<div class="container">
+		<div class="optimization_header">What is optimization and why is it needed?</div>
+		<div class="optimization_text">
+			There are countless active and even abandoned sites on the Internet. Most of them coincide not only in categories, but also in content. <br><br>
+			Imagine thousands of sites providing the same information or selling the same service in one way or another. And you can get to these sites only by thematic queries in search engines. <br><br>
+			But what should you do if your site looks like a hundred or a thousand of the same, and there are only 10 positions on one Google or Yandex page? How to bring visitors to your resource page? This is what optimization is for - to bring your site to the first page of search! <br><br>
+			<span>We will teach you how to make your site attractive to search engines and advise you on how to bring it to the first pages, bypassing all competitors.</span>
+		</div>
+		<img src="../src/img/bg/woman.jpg" alt="woman_wallpaper" class="optimization_img">
+	</div>
+</section>
 
+
+<section class="results">
+	<div class="container">
+		<div class="results_header">Upon graduation, you will be able to!</div>
+		<div class="waiting_yellowhr"></div>
+		<div class="results_wrapper">
+			<div class="results_wrapper_item">
+				<div class="results_wrapper_item_imgarea"><img src="../src/icons/Results/resultimg1.png" alt="resultimg1" class="results_wrapper_item_img"></div>
+				<div class="results_wrapper_item_text">Create your website or blog</div>
+			</div>
+			<div class="results_wrapper_item">
+				<div class="results_wrapper_item_imgarea"><img src="../src/icons/Results/resultimg2.png" alt="resultimg2" class="results_wrapper_item_img"></div>
+				<div class="results_wrapper_item_text">Optimize it properly</div>
+			</div>
+			<div class="results_wrapper_item">
+				<div class="results_wrapper_item_imgarea"><img src="../src/icons/Results/resultimg3.png" alt="resultimg3" class="results_wrapper_item_img"></div>
+				<div class="results_wrapper_item_text">Provide him with a slow but steady growth in the TOP</div>
+			</div>
+			<div class="results_wrapper_item">
+				<div class="results_wrapper_item_imgarea"><img src="../src/icons/Results/resultimg4.png" alt="resultimg4" class="results_wrapper_item_img"></div>
+				<div class="results_wrapper_item_text">Achieve sustainable visitor growth</div>
+			</div>
+			<div class="results_wrapper_item">
+				<div class="results_wrapper_item_imgarea"><img src="../src/icons/Results/resultimg5.png" alt="resultimg5" class="results_wrapper_item_img"></div>
+				<div class="results_wrapper_item_text">Get tangible profits</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
+<section class="gift">
+	<div class="container">
+		<div class="gift_img"><img src="../src/icons/Gift/gift.png" alt="giftimg"></div>
+		<div class="gift_text">Bonuses and gifts are provided for all participants of the intensive. Click on the button below, take part in webinars and collect your prize at the end of the training!</div>
+		<button class="main_btn">Sign up for an intensive!</button>
+	</div>
+</section>
+
+
+
+<section class="time">
+	<div class="contaoner">
+		<div class="time_img"><img src="../src/icons/Time/timeimg.png" alt="timeimg"></div>
+		<div class="time_header">The first webinar will take place on:</div>
+		<div class="time_subheader">September 10 at 20:00</div>
+		<div class="time_text">Register now, places are limited!</div>
+	</div>
+</section>
+
+
+
+<footer>
+	<div class="container">
+		<div class="footer_wrapper">
+			<div class="footer_item">
+				<a href="#" class="footer_link">Support</a>
+				<a href="#" class="footer_link">Privacy Policy</a>
+			</div>
+			<div class="footer_item2">
+				<div class="footer_call">Call us:</div>
+				<a href="">8-800-555-01-21</a>
+			</div>
+		</div>
+	</div>
+</footer>
 
 
 
