--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>NR0</title>
+	<!-- Normalize from cdn. Normalize reset all styles for all browsers. Need to be used for proper work on all sites -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+	<!-- Google fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<!-- Google fonts -->
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<!-- Google fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -135,21 +143,11 @@
 			</div>
 			<div class="footer_item2">
 				<div class="footer_call">Call us:</div>
-				<a href="">8-800-555-01-21</a>
+				<a href="tel:+37116161610">16161610</a>
 			</div>
 		</div>
 	</div>
 </footer>
-
-
-
-
-
-
-
-
-
-
 
 
 
